# tork-framework

./: .gitignore  Cargo.toml  README.md  current-risks.md  security-audit.md
benchmarks/http-parity/: Cargo.toml  README.md
benchmarks/http-parity/benches/: http_core.rs
benchmarks/http-parity/src/: lib.rs
benchmarks/http-parity/tests/: parity.rs
crates/tork/: Cargo.toml
crates/tork-core/: Cargo.toml
crates/tork-core/src/: app.rs  body.rs  constants.rs  env.rs  error.rs  hooks.rs  lib.rs  lifespan.rs  multipart.rs  openapi.rs  realtime.rs  redis_handle.rs  resources.rs  security.rs  server.rs  service.rs  settings.rs  sse.rs  state.rs  tls.rs  ws.rs
crates/tork-core/src/cache/: handle.rs  memory.rs  mod.rs  redis.rs  store.rs
crates/tork-core/src/extract/: body.rs  header.rs  mod.rs  path.rs  valid.rs
crates/tork-core/src/logging/: config.rs  event.rs  format.rs  logger.rs  mod.rs  span.rs  subscriber.rs
crates/tork-core/src/middleware/: body_limit.rs  compression.rs  cors.rs  https_redirect.rs  mod.rs  proxy_headers.rs  request_id.rs  security_headers.rs  timeout.rs  trace.rs  trusted_host.rs
crates/tork-core/src/response/: json.rs  mod.rs
crates/tork-core/src/router/: matcher.rs  mod.rs
crates/tork-core/src/testing/: client.rs  cookie.rs  mod.rs  recorder.rs  request.rs  response.rs  sse.rs  websocket.rs
crates/tork-core/src/throttle/: engine.rs  key.rs  mod.rs  redis.rs  store.rs
crates/tork-macros/: Cargo.toml
crates/tork-macros/src/: api_model.rs  api_router.rs  app_error.rs  common.rs  dependency.rs  form_model.rs  inject.rs  lib.rs  lifespan.rs  main_macro.rs  middleware.rs  resources.rs  route.rs  settings.rs  sse.rs  websocket.rs
crates/tork-openapi/: Cargo.toml
crates/tork-openapi/src/: asyncapi.rs  docs.rs  lib.rs  spec.rs
crates/tork-orm/: Cargo.toml
crates/tork-orm-core/src/: database.rs  executor.rs  lib.rs  model.rs  relation.rs
crates/tork-orm-core/src/dialect/: mod.rs  writer.rs
crates/tork-orm-core/src/driver/: sqlite.rs
crates/tork-orm-core/src/query/: ast.rs  column.rs  expr.rs  mod.rs  queryset.rs
crates/tork-orm-macros/src/: lib.rs  model.rs
crates/tork-orm/src/: lib.rs
crates/tork/src/: lib.rs
crates/tork/tests/: api_model.rs  api_router.rs  app_error.rs  cache.rs  cache_redis.rs  forms.rs  hooks.rs  lifespan.rs  logging.rs  middleware.rs  openapi_docs.rs  resources_inject.rs  route_macro.rs  scoped_hooks.rs  security_redteam.rs  server_unix.rs  settings.rs  sse.rs  testing_client.rs  testing_ws_sse.rs  throttle.rs  tls.rs  ui.rs  uploads_e2e.rs  websocket.rs  ws_chat.rs
crates/tork/tests/ui/fail/: dependency_self_receiver.rs  dependency_self_receiver.stderr  main_not_async.rs  main_not_async.stderr
crates/tork/tests/ui/pass/: dependency.rs  main.rs
docs/: 01-introduction.md  02-getting-started.md  03-routing.md  04-extractors-and-dependency-injection.md  05-models-and-validation.md  06-responses-and-errors.md  07-openapi-and-docs.md  08-middleware.md  09-lifecycle-hooks-and-error-handling.md  09-project-structure.md  10-project-structure.md  10-server-sent-events.md  11-project-structure.md  11-websocket.md  12-forms-and-file-uploads.md  12-project-structure.md  13-project-structure.md  13-settings.md  14-project-structure.md  14-testing.md  15-logging.md  15-project-structure.md  16-project-structure.md  17-caching.md  18-rate-limiting.md  19-tls-and-http2.md  README.md  testing-coverage-map.md
examples/auth_jwt/: Cargo.toml
examples/auth_jwt/src/: auth.rs  config.rs  lib.rs  main.rs  routers.rs  schemas.rs  security.rs  users.rs
examples/auth_jwt/tests/: auth.rs
examples/my_api/: .env.example  Cargo.toml
examples/my_api/config/: default.toml
examples/my_api/src/: lib.rs  main.rs
examples/my_api/src/core/: app_state.rs  auth.rs  errors.rs  mod.rs
examples/my_api/src/models/: chat.rs  event.rs  health.rs  info.rs  mod.rs  order.rs  upload.rs  user.rs
examples/my_api/src/repositories/: mod.rs  user_repository.rs
examples/my_api/src/routers/: demo.rs  health.rs  mod.rs  orders.rs  users.rs
examples/my_api/src/services/: mod.rs  order_service.rs  user_service.rs
examples/my_api/tests/: auth.rs
scripts/: test-framework-coverage.sh
scripts/perf/: profile_cpu.sh  profile_leaks.sh
