# Tork framework workspace.
#
# Rooted under `framework/` so everything belonging to the framework lives in one
# place. The ORM and CLI are separate, later-phase efforts and are intentionally
# not members of this workspace yet.
[workspace]
resolver = "2"
members = [
    "crates/tork",
    "crates/tork-core",
    "crates/tork-macros",
    "crates/tork-openapi",
    "examples/my_api",
]

# Shared metadata inherited by every crate via `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
authors = ["muzakon <hasanmuzak@hotmail.com>"]
license = "MIT"
repository = "https://github.com/muzakon/tork"

# Single source of truth for dependency versions. Pinned to releases verified
# against the toolchain in `rust-toolchain.toml`.
[workspace.dependencies]
# Internal crates.
tork-core = { path = "crates/tork-core", version = "0.1.0" }
tork-macros = { path = "crates/tork-macros", version = "0.1.0" }
tork-openapi = { path = "crates/tork-openapi", version = "0.1.0" }

# HTTP and async runtime.
hyper = { version = "1.10", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = [
    "server",
    "server-auto",
    "server-graceful",
    "tokio",
    "http1",
    "http2",
] }
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "sync",
    "time",
] }
# WebSocket protocol (handshake + framing); used over hyper's upgraded socket.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
http = "1"
http-body = "1"
http-body-util = "0.1.3"
bytes = "1"
matchit = "0.9"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation and JSON Schema generation.
garde = { version = "0.23", features = ["derive"] }
schemars = "1"

# Error-response metadata: trace identifiers and timestamps.
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }

# Response compression.
flate2 = "1"

# Procedural macro toolkit.
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Release profile: optimize for a fast, lean production binary.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
