# Tork framework workspace.
#
# Rooted under `framework/` so everything belonging to the framework lives in one
# place. The ORM lives in its own workspace under `../orm`, and the CLI remains a
# separate, later-phase effort; neither is a member of this workspace.
[workspace]
resolver = "2"
members = [
    "benchmarks/http-parity",
    "crates/tork",
    "crates/tork-core",
    "crates/tork-macros",
    "crates/tork-openapi",
    "examples/my_api",
]

# Shared metadata inherited by every crate via `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
authors = ["muzakon <hasanmuzak@hotmail.com>"]
license = "MIT"
repository = "https://github.com/muzakon/tork"

# Single source of truth for dependency versions. Pinned to releases verified
# against the toolchain in `rust-toolchain.toml`.
[workspace.dependencies]
# Internal crates.
tork = { path = "crates/tork", version = "0.1.0" }
tork-core = { path = "crates/tork-core", version = "0.1.0" }
tork-macros = { path = "crates/tork-macros", version = "0.1.0" }
tork-openapi = { path = "crates/tork-openapi", version = "0.1.0" }

# HTTP and async runtime.
axum = { version = "0.8.7", features = ["http1", "json", "tokio"] }
hyper = { version = "1.10", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = [
    "client",
    "client-legacy",
    "server",
    "server-auto",
    "server-graceful",
    "tokio",
    "http1",
    "http2",
] }
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "sync",
    "time",
] }
tower = "0.5"
# WebSocket protocol (handshake + framing); used over hyper's upgraded socket.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
http = "1"
http-body = "1"
http-body-util = "0.1.3"
bytes = "1"
# Low-level socket control (SO_REUSEPORT for `App::reuse_port`).
socket2 = { version = "0.6", features = ["all"] }

# TLS termination (optional, behind tork-core's `tls` feature). rustls + ring: pure
# Rust, no OpenSSL or C toolchain. Defaults are turned off so we pin the ring
# provider explicitly rather than aws-lc-rs.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
# Self-signed certificate generation for the TLS test suite.
rcgen = "0.13"
matchit = "0.9"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# In-memory cache with per-entry TTL (async, tokio-friendly).
moka = { version = "0.12", features = ["future"] }
# Redis client for the optional Redis cache store (multiplexed async + reconnect).
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }

# Multipart/form-data parsing and file uploads.
multer = "3.1"
tempfile = "3.27"
mime = "0.3.17"
infer = "0.19"
ipnet = "2.11"

# Validation and JSON Schema generation.
garde = { version = "0.23", features = ["derive", "email"] }
schemars = "1"

# Typed configuration: source merging and .env loading.
figment = { version = "0.10", features = ["env", "toml"] }
dotenvy = "0.15"

# Logging and tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
    "ansi",
] }
tracing-appender = "0.2"

# OpenTelemetry trace export (enabled by tork-core's `otel` feature).
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

# Error-response metadata: trace identifiers and timestamps.
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }

# Response compression.
flate2 = "1"

# Procedural macro toolkit.
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Benchmarking.
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
trybuild = "1"

# Release profile: optimize for a fast, lean production binary.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
