[package]
name = "http-parity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Parity benchmarks and load tests for Tork versus Axum."

[dependencies]
axum.workspace = true
bytes.workspace = true
garde.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tork.workspace = true
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "http_core"
harness = false
