[package]
name = "tork-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime for the Tork web framework: HTTP server, routing, dependency injection, responses, and errors, built on Hyper and Tokio."

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
matchit.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
multer.workspace = true
tempfile.workspace = true
mime.workspace = true
infer.workspace = true
garde.workspace = true
schemars.workspace = true
figment.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
uuid.workspace = true
time.workspace = true
flate2.workspace = true

[features]
# Exports traces over OTLP via OpenTelemetry. Off by default to keep the base
# build lean.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
