[package]
name = "tork-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime for the Tork web framework: HTTP server, routing, dependency injection, responses, and errors, built on Hyper and Tokio."

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
matchit.workspace = true
socket2.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
multer.workspace = true
tempfile.workspace = true
mime.workspace = true
infer.workspace = true
ipnet.workspace = true
garde.workspace = true
schemars.workspace = true
figment.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
uuid.workspace = true
time.workspace = true
flate2.workspace = true
moka.workspace = true
redis = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[dev-dependencies]
# Self-signed certificate generation for the TLS unit tests.
rcgen = { workspace = true }

[features]
# Exports traces over OTLP via OpenTelemetry. Off by default to keep the base
# build lean.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
# Enables the Redis cache store (`RedisStore` / `Cache::redis`). Off by default so
# the base build does not pull in the Redis client.
redis = ["dep:redis"]
# Enables TLS termination (`App::tls` / `TlsConfig`) via rustls + ring. Off by
# default so the base build does not pull in the TLS stack.
tls = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
]
