[package]
name = "my_api"
version = "0.1.0"
edition = "2021"
publish = false
description = "Example application demonstrating the Tork web framework."

[dependencies]
tork = { path = "../../crates/tork" }
# Required because garde's derive references `::garde` directly (it has no
# crate-path override); serde and schemars are routed through the tork facade.
garde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
