[package]
name = "my_api"
version = "0.1.0"
edition = "2021"
publish = false
description = "Example application demonstrating the Tork web framework."

[dependencies]
tork = { path = "../../crates/tork" }
# Required because garde's derive references `::garde` directly (it has no
# crate-path override); serde and schemars are routed through the tork facade.
garde = { workspace = true }
# Provides a stream source for the Server-Sent Events demo endpoint.
futures-util = { workspace = true }
# `tokio::select!` for the bidirectional chat WebSocket loop.
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
